--- a/Day1-Intro/package.json
+++ b/Day1-Intro/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
+  "keywords": ["blockchain","node","js",],
   "author": "Philip",
   "license": "ISC"
 }
