--- a/Day2/lesson/tdd/jest/package.json
+++ b/Day2/lesson/tdd/jest/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jest": "^29.5.1",
     "dotenv": "^16.0.3",
     "jest": "^29.5.0"
   }
